<resources>
    <string name="app_name">Instagrann</string>
    <string name="pass_hint">Password</string>
    <string name="email_hint">E-mail</string>
    <string name="login_logo_desc">LoginLogo</string>
    <string name="login_btn_text">Log in</string>
    <string name="signup_btn_text">Sign up</string>
    <string name="actionSearchText">Search</string>
    <string name="accountSettings">Account settings</string>
    <string name="loguoutString">Logout</string>
    <string name="regBtnText">Create Account</string>
    <string name="regLoginText">Already have an Account?</string>
    <string name="setup_name_hint">Your Name</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description</string>
    <string name="new_post_btn_hint">Post image</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>
    <string name="default_notification_channel_id">Instagrann_CH_01</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comments_title">Comments</string>
    <string name="comment_hint">New comment...</string>
    <string name="acc_settings_btn">EDIT PROFILE</string>
</resources>
